# ida

./: .cruft.json  .gitignore  Dockerfile  LICENSE  README.md  compose.dev.yml  compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docker.yml  test.yml
docker/: entrypoint.sh
requirements/: dev.txt  main.txt  requirements-dev.in  requirements-main.in
src/: manage.py
src/apps/: __init__.py
src/apps/companies/: __init__.py  admin.py  apps.py  models.py  tests.py
src/apps/companies/fixtures/: companies.json
src/apps/companies/migrations/: 0001_initial.py  0002_alter_company_business_court_and_more.py  0003_alter_bankaccount_options_alter_company_options_and_more.py  0004_company_graphic_element_company_logo_and_more.py  __init__.py
src/apps/geo/: __init__.py  admin.py  apps.py  models.py  tests.py
src/apps/geo/fixtures/: geo.json
src/apps/invoices/: __init__.py  admin.py  apps.py  models.py  tests.py
src/apps/projects/: __init__.py  admin.py  apps.py  models.py  tests.py
src/apps/relations/: __init__.py  admin.py  apps.py  models.py  tests.py
src/apps/telegram/: __init__.py  admin.py  apps.py  bot.py  checks.py  conf.py  models.py  resolver.py  tests.py  urls.py  utils.py  views.py
src/apps/timesheets/: __init__.py  admin.py  apps.py  models.py  tests.py
src/apps/users/: admin.py  apps.py  middleware.py  models.py  tests.py  utils.py
src/ida/: __init__.py  __main__.py  asgi.py  environ.py  main.py  settings.py  urls.py  utils.py  wsgi.py
src/pdf/: __init__.py  _reportlab.py  invoice.py
tests/: __init__.py  test_main.py
(+142 files in other folders)
