[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ida"
version = "0.0.1"
authors = [
  { name="Sonny Valkeneers", email="sonny@softllama.net" },
]
description = "A python app that takes care of your accountancy."
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
manage = "manage:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements-main.in"] }
optional-dependencies.dev = { file = ["requirements/requirements-dev.in"] }

[tool.setuptools.package-data]
"pdf" = ["assets/fonts/*"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["**/migrations"]

[tool.ruff.lint]
select = ["B", "C901", "D", "E4", "E7", "E9", "F", "I", "W", "ARG", "FIX", "A"]
ignore = ["FIX002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pylint.MASTER]
ignore = [ 'migrations' ]

[tool.pylint."MESSAGES CONTROL"]
disable = "all"
enable = "C1805,E1120,R1705,W0107,W0221,W0223,W0613,W0632,W0719,W2301,W3101"

[tool.pyright]
exclude = [ "**/migrations", "**/_reportlab.py", "**/tests.py"]
typeCheckingMode = "standard"
deprecateTypingAliases = true
pythonVersion = "3.12"